--- a/portfolio.html
+++ b/portfolio.html
@@ -1599,7 +1599,7 @@
       <ul class="portfolio-hover-items-list">
         
         <li>
-          <a class="portfolio-hover-item" href="/portfolio/project-one-h346n-425h2">
+          <a class="portfolio-hover-item" href="/portfolio/1">
             <h1 class="portfolio-hover-item-title"><span class="portfolio-hover-item-content">1</span></h1>
           </a>
         </li>
@@ -1623,7 +1623,7 @@
         </li>
         
         <li>
-          <a class="portfolio-hover-item" href="/portfolio/project-one-h346n-425h2-f6eh8">
+          <a class="portfolio-hover-item" href="/portfolio/1-f6eh8">
             <h1 class="portfolio-hover-item-title"><span class="portfolio-hover-item-content">5</span></h1>
           </a>
         </li>
