--- a/portfolio.html
+++ b/portfolio.html
@@ -1605,7 +1605,7 @@
         </li>
         
         <li>
-          <a class="portfolio-hover-item" href="/portfolio/project-three-ph2n3-6yzhj">
+          <a class="portfolio-hover-item" href="/portfolio/2">
             <h1 class="portfolio-hover-item-title"><span class="portfolio-hover-item-content">2</span></h1>
           </a>
         </li>
