--- a/portfolio/1.html
+++ b/portfolio/1.html
@@ -1733,7 +1733,7 @@
   
   
   
-    <a href="/portfolio/project-three-ph2n3-6yzhj" class="item-pagination-link item-pagination-link--next">
+    <a href="/portfolio/2" class="item-pagination-link item-pagination-link--next">
       <div class="pagination-title-wrapper">
         
         <div class="visually-hidden">Next</div>
