--- a/portfolio/2.html
+++ b/portfolio/2.html
@@ -1808,7 +1808,7 @@
   data-collection-type="portfolio-index-background"
 >
   
-    <a href="/portfolio/project-one-h346n-425h2" class="item-pagination-link item-pagination-link--prev">
+    <a href="/portfolio/1" class="item-pagination-link item-pagination-link--prev">
       <div class="item-pagination-icon icon icon--stroke">
         <svg class="caret-left-icon--small" viewBox="0 0 9 16">
           <polyline fill="none" stroke-miterlimit="10" points="7.3,14.7 2.5,8 7.3,1.2"/>
@@ -1824,7 +1824,7 @@
     </a>
   
   
-    <a href="/portfolio/project-two-whgpe-pkktj" class="item-pagination-link item-pagination-link--next">
+    <a href="/portfolio/3" class="item-pagination-link item-pagination-link--next">
       <div class="pagination-title-wrapper">
         
         <div class="visually-hidden">Next</div>
