--- a/portfolio/3.html
+++ b/portfolio/3.html
@@ -1821,7 +1821,7 @@
   data-collection-type="portfolio-index-background"
 >
   
-    <a href="/portfolio/project-three-ph2n3-6yzhj" class="item-pagination-link item-pagination-link--prev">
+    <a href="/portfolio/2" class="item-pagination-link item-pagination-link--prev">
       <div class="item-pagination-icon icon icon--stroke">
         <svg class="caret-left-icon--small" viewBox="0 0 9 16">
           <polyline fill="none" stroke-miterlimit="10" points="7.3,14.7 2.5,8 7.3,1.2"/>
@@ -1837,7 +1837,7 @@
     </a>
   
   
-    <a href="/portfolio/project-four-c9f4z-xcytt" class="item-pagination-link item-pagination-link--next">
+    <a href="/portfolio/4" class="item-pagination-link item-pagination-link--next">
       <div class="pagination-title-wrapper">
         
         <div class="visually-hidden">Next</div>
