--- a/kontakt.html
+++ b/kontakt.html
@@ -1975,6 +1975,7 @@
             })
             .then(response => response.json())
             .then(data => {
+                console.log('Response:', data); // Log response to console
                 alert(data.message); // Display response message
             })
             .catch(error => {
