--- a/kontakt.html
+++ b/kontakt.html
@@ -1632,7 +1632,8 @@
   <div class="form-inner-wrapper"  hidden>
     <form
        data-dynamic-strings
-       autocomplete="on"
+       autocomplete="on" 
+       id="contactForm">
       
         <div class="field-list clear">
 
