--- a/kontakt.html
+++ b/kontakt.html
@@ -1633,7 +1633,7 @@
     <form
        data-dynamic-strings
        autocomplete="on" 
-       id="contactForm">
+       id="contactForm"
       
         <div class="field-list clear">
 
