--- a/kontakt.html
+++ b/kontakt.html
@@ -1132,7 +1132,7 @@
                     aria-required="true"
                 />
               </div>
-              <div class="form-item fields phone required">
+              <div class="form-item field phone required">
             <label class="title">
               Numer telefonu
               <span class="required" aria-hidden="true">*</span>
