--- a/kontakt.html
+++ b/kontakt.html
@@ -1101,7 +1101,7 @@
        data-success-redirect=""
        data-dynamic-strings
        autocomplete="on"
-       action="[LINK]"
+       action="https://docs.google.com/forms/d/e/1FAIpQLScWYOXc22tKxaFcQrw64C5prQjlW5veeAoOo-Y-Z6R5P34Q2Q/formResponse?"
        target="hidden_iframe" onsubmit="submitted=true;">
         <div class="field-list clear">
               <div id="text-125165ed-77c5-4c23-8270-4dcd0ba3a0df" class="form-item field text required">
@@ -1112,8 +1112,8 @@
                 <input
                     class="field-element text"
                     type="text"
-                    id="name"
-                    name="name"
+                    id="entry.2110159309"
+                    name="entry.2110159309"
                     aria-required="true"
                 />
               </div>
@@ -1124,8 +1124,8 @@
             </label>
                 <input
                     class="field-element"
-                    id="email"
-                    name="email"
+                    id="entry.1165015894"
+                    name="entry.1165015894"
                     type="email"
                     autocomplete="email"
                     spellcheck="false"
@@ -1143,8 +1143,8 @@
                 type="text"
                 maxlength="13"
                 aria-required="true"
-                id="phone"
-                name="phone"
+                id="entry.662937365"
+                name="entry.662937365"
                 oninput="formatPhoneNumber(this)"
               />
             </div>
@@ -1171,8 +1171,8 @@
             </label>
                 <textarea
                     class="field-element "
-                    name="message"
-                    id="message"
+                    name="entry.546568345"
+                    id="entry.546568345"
                     aria-required="true"
                 ></textarea>
               </div>
