--- a/kontakt.html
+++ b/kontakt.html
@@ -1098,6 +1098,23 @@
   <div id="form-submission-html-667959c00c77de4654109d10" class="sqs-form-block-submission-html" data-submission-html=""></div>
 <div class="form-wrapper"
 >
+  
+<script src="assets/js/jquery.min.js"></script>
+<script type="text/javascript">
+$(document).ready(function() {
+  var submitted = false;
+  $('#gform').on('submit', function(e) {
+    e.preventDefault(); // Prevent the default form submission behavior
+    if (!submitted) {
+      $('#gform *').fadeOut(2000, function() {
+        $('#gform').prepend('<p>Your submission has been processed...</p>');
+      });
+      submitted = true;
+    }
+  });
+});
+</script>
+    
   <div class="form-inner-wrapper"  hidden>
     <form
        name="gform" id="gform" enctype="text/plain"
@@ -1105,7 +1122,7 @@
        data-dynamic-strings
        autocomplete="on"
        action="https://docs.google.com/forms/d/e/1FAIpQLScWYOXc22tKxaFcQrw64C5prQjlW5veeAoOo-Y-Z6R5P34Q2Q/formResponse?"
-       target="hidden_iframe" onsubmit="handleSubmit(event)">
+       target="hidden_iframe" onsubmit="submitted=true">
         <div class="field-list clear">
               <div id="text-125165ed-77c5-4c23-8270-4dcd0ba3a0df" class="form-item field text required">
             <label class="title" for="text-125165ed-77c5-4c23-8270-4dcd0ba3a0df-field">
@@ -1199,6 +1216,8 @@
         />
       </div>
     </form>
+       <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
+    
       <div class="hidden form-submission-text" id="hidden-submission-text"><p class="" style="white-space:pre-wrap;">Dziękuję za wiadomość! Zazwyczaj odpowiadam w przeciągu 24 godzin.  </p></div>
       <div class="hidden form-submission-html" data-submission-html=""></div>
     <script>
