--- a/kontakt.html
+++ b/kontakt.html
@@ -1105,12 +1105,17 @@ $(document).ready(function() {
   var submitted = false;
   $('#gform').on('submit', function(e) {
     e.preventDefault(); // Prevent the default form submission behavior
-    document.getElementById('gform').style.display = 'none'; // Hide the form
-    document.getElementById('hidden form-submission-text').style.display = 'block'; // Show the thank you message
-
     }
   });
 });
+</script>
+<script>
+        function handleSubmit(event) {
+            event.preventDefault(); // Prevent the default form submission behavior
+            submitted = true;
+            document.getElementById('myForm').style.display = 'none'; // Hide the form
+            document.getElementById('message').style.display = 'block'; // Show the thank you message
+        }
 </script>
     
   <div class="form-inner-wrapper"  hidden>
@@ -1120,7 +1125,7 @@ $(document).ready(function() {
        data-dynamic-strings
        autocomplete="on"
        action="https://docs.google.com/forms/d/e/1FAIpQLScWYOXc22tKxaFcQrw64C5prQjlW5veeAoOo-Y-Z6R5P34Q2Q/formResponse?"
-       target="hidden_iframe" onsubmit="submitted=true;">
+       target="hidden_iframe" onsubmit="handleSubmit(event)">
         <div class="field-list clear">
               <div id="text-125165ed-77c5-4c23-8270-4dcd0ba3a0df" class="form-item field text required">
             <label class="title" for="text-125165ed-77c5-4c23-8270-4dcd0ba3a0df-field">
