--- a/kontakt.html
+++ b/kontakt.html
@@ -1125,7 +1125,7 @@ $(document).ready(function() {
        data-dynamic-strings
        autocomplete="on"
        action="https://docs.google.com/forms/d/e/1FAIpQLScWYOXc22tKxaFcQrw64C5prQjlW5veeAoOo-Y-Z6R5P34Q2Q/formResponse?"
-       target="hidden_iframe" onsubmit="handleSubmit(event)">
+       target="hidden_iframe" onsubmit="submitted=true;">
         <div class="field-list clear">
               <div id="text-125165ed-77c5-4c23-8270-4dcd0ba3a0df" class="form-item field text required">
             <label class="title" for="text-125165ed-77c5-4c23-8270-4dcd0ba3a0df-field">
