--- a/kontakt.html
+++ b/kontakt.html
@@ -1099,11 +1099,9 @@
 <div class="form-wrapper"
 >
   
-<script src="assets/js/jquery.min.js"></script>
 <script type="text/javascript">var submitted=false;</script>
 <script type="text/javascript">
 $('#gform').on('submit', function(e) {
-  $('#gform *').fadeOut(2000);
   $('#gform').prepend('Your submission has been processed...');
   });
 </script>
@@ -1119,8 +1117,10 @@ $('#gform').on('submit', function(e) {
     <form
        name="gform" id="gform" enctype="text/plain"
        autocomplete="on"
+       data-success-redirect=""
+       data-dynamic-strings
        action="https://docs.google.com/forms/d/e/1FAIpQLScWYOXc22tKxaFcQrw64C5prQjlW5veeAoOo-Y-Z6R5P34Q2Q/formResponse?"
-       target="hidden_iframe" onsubmit="submitted=true;>
+       target="hidden_iframe" onsubmit="submitted=true;">
         <div class="field-list clear">
               <div id="text-125165ed-77c5-4c23-8270-4dcd0ba3a0df" class="form-item field text required">
             <label class="title" for="text-125165ed-77c5-4c23-8270-4dcd0ba3a0df-field">
