--- a/kontakt.html
+++ b/kontakt.html
@@ -3,7 +3,6 @@
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- This is Squarespace. --><!-- pracowniabofajnietu -->
 <base href="">
 <meta charset="utf-8" />
 <title>Kontakt &mdash; BoFajnieTu</title>
@@ -339,11 +338,11 @@
     #hidden-submission-text {
             display: none;
     }
-    #entry\\.546568345 {
+    textarea {
+        resize: none;
         min-height: 50px;
         height: auto;
         overflow-y: hidden;
-        resize: none; /* Prevent manual resizing */
     }
     @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
         .header-blur-background {
