--- a/portfolio/4.html
+++ b/portfolio/4.html
@@ -1961,6 +1961,7 @@
   id="itemPagination"
   class="item-pagination item-pagination--prev-next"
   data-collection-type="portfolio-index-background"
+  data-section-theme=""
 >
   
     <a href="/portfolio/3" class="item-pagination-link item-pagination-link--prev">
