--- a/portfolio/4.html
+++ b/portfolio/4.html
@@ -1741,7 +1741,7 @@
 <section
   data-test="page-section"
   
-  data-section-theme="black"
+  data-section-theme=""
   class='page-section 
     
       full-bleed-section
