--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
                   >
                       <div class="header-title-logo">
                         <a href="/" data-animation-role="header-element">
-<img elementtiming="nbf-header-logo-desktop" src="//images.squarespace-cdn.com/content/v1/66794c0184324035e9bb5b17/e57ee049-cf28-4019-ae26-1f4e17f4a522/FajnieTuLogo.jpg?format=1500w" alt="BoFajnieTu" style="display:block" fetchpriority="high" loading="eager" decoding="async" data-loader="raw">
+<img elementtiming="nbf-header-logo-desktop" src="/images/FajnieTuLogo.jpg" alt="BoFajnieTu" style="display:block" fetchpriority="high" loading="eager" decoding="async" data-loader="raw">
                         </a>
                       </div>
                   </div>
