--- a/index.html
+++ b/index.html
@@ -1403,7 +1403,7 @@
   }
 </style><div class="fluid-engine fe-66795b35e8ae70143c4a5e64"><div class="fe-block fe-block-e55f73c850a320c8a206"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-e55f73c850a320c8a206"><div class="sqs-block-content">
 <div class="sqs-html-content">
-  <div class="sqsrte-scaled-text-container"><span class="sqsrte-scaled-text"><h1 style="white-space:pre-wrap;">Poznajmy się</h1></span></div>
+  <div class="sqsrte-scaled-text-container"><span class="sqsrte-scaled-text"><h1 style="white-space:nowrap;">Poznajmy się</h1></span></div>
 </div>
 </div></div></div><div class="fe-block fe-block-46603503d7993896da27 sqs-position-sticky"><div class="sqs-block image-block sqs-block-image sqs-stretched" data-aspect-ratio="59.068226981673654" data-block-type="5" id="block-46603503d7993896da27"><div class="sqs-block-content">
     <div
