--- a/index.html
+++ b/index.html
@@ -1401,7 +1401,7 @@
       align-items: flex-start;
     }
   }
-</style><div class="fluid-engine fe-66795b35e8ae70143c4a5e64"><div class="fe-block fe-block-e55f73c850a320c8a206">
+</style><div class="fluid-engine fe-66795b35e8ae70143c4a5e64"><div class="fe-block fe-block-e55f73c850a320c8a206" style="font-family: 'Arial';">
   <h1 style="white-space:nowrap;">Poznajmy się</h1>
 </div><div class="fe-block fe-block-46603503d7993896da27 sqs-position-sticky"><div class="sqs-block image-block sqs-block-image sqs-stretched" data-aspect-ratio="59.068226981673654" data-block-type="5" id="block-46603503d7993896da27"><div class="sqs-block-content">
     <div
