--- a/kontakt.html
+++ b/kontakt.html
@@ -1210,7 +1210,7 @@
         <input
           class="button sqs-system-button sqs-editable-button sqs-button-element--primary"
           type="submit"
-          value="Wyślij"
+          value="Prześlij"
         />
       </div>
     </form>
