--- a/index.html
+++ b/index.html
@@ -1840,23 +1840,22 @@
       align-items: flex-start;
     }
   }
-</style><div class="fluid-engine fe-66794c0284324035e9bb5b31"><div class="fe-block fe-block-6c49e712a0d7dfbbd705 sqs-position-sticky"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-6c49e712a0d7dfbbd705"><div class="sqs-block-content">
-<div class="sqs-html-content">
+</style><div class="fluid-engine fe-66794c0284324035e9bb5b31">
+
+<div class="fe-block fe-block-6c49e712a0d7dfbbd705 sqs-position-sticky" style="mix-blend-mode: normal; --sticky-original-position: 102px; --block-height: 261px; top: calc(var(--sticky-original-position) + 75px);"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="{&quot;topLeft&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0},&quot;topRight&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0},&quot;bottomLeft&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0},&quot;bottomRight&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0}}" id="block-6c49e712a0d7dfbbd705"><div class="">
+<div class="">
   <h4 style="white-space:pre-wrap;">Pracownia BoFajnieTu</h4>
 </div>
-</div></div></div><div class="fe-block fe-block-aefe628c1c57ad1cfeed sqs-position-sticky"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-aefe628c1c57ad1cfeed"><div class="sqs-block-content">
-<div class="sqs-html-content">
-  <p class="" style="white-space:pre-wrap;">Paula Wiszniewska</p>
+</div><div><div>
+<div>
+  <p style="">Paula Wiszniewska</p><p style="">al. Marylskiego 158</p><p style="">05-825 Książenice
+</p>
 </div>
-</div></div></div><div class="fe-block fe-block-15c514f985aba11b7328"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-15c514f985aba11b7328"><div class="sqs-block-content">
-<div class="sqs-html-content">
-  <p class="" style="white-space:pre-wrap;">al. Marylskiego 158</p>
+</div></div></div>
+
 </div>
-</div></div></div><div class="fe-block fe-block-8ac65d14a68cd66e757c sqs-position-sticky"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-8ac65d14a68cd66e757c"><div class="sqs-block-content">
-<div class="sqs-html-content">
-  <p class="" style="white-space:pre-wrap;">05-825 Książenice</p>
-</div>
-</div></div></div><div class="fe-block fe-block-yui_3_17_2_1_1719310564787_17756 sqs-position-sticky"><div class="sqs-block image-block sqs-block-image sqs-stretched" data-block-type="5" id="block-yui_3_17_2_1_1719310564787_17756"><div class="sqs-block-content">
+  
+<div class="fe-block fe-block-yui_3_17_2_1_1719310564787_17756 sqs-position-sticky"><div class="sqs-block image-block sqs-block-image sqs-stretched" data-block-type="5" id="block-yui_3_17_2_1_1719310564787_17756"><div class="sqs-block-content">
     <div
       class="
         image-block-outer-wrapper
