--- a/index.html
+++ b/index.html
@@ -1842,6 +1842,7 @@
   }
 </style><div class="fluid-engine fe-66794c0284324035e9bb5b31">
 
+  
 <div class="fe-block fe-block-6c49e712a0d7dfbbd705 sqs-position-sticky" style="mix-blend-mode: normal; --sticky-original-position: 102px; --block-height: 261px; top: calc(var(--sticky-original-position) + 75px);"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="{&quot;topLeft&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0},&quot;topRight&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0},&quot;bottomLeft&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0},&quot;bottomRight&quot;:{&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0}}" id="block-6c49e712a0d7dfbbd705"><div class="">
 <div class="">
   <h4 style="white-space:pre-wrap;">Pracownia BoFajnieTu</h4>
@@ -1852,11 +1853,61 @@
 </p>
 </div>
 </div></div></div>
-
 </div>
+
   
 <div class="fe-block fe-block-yui_3_17_2_1_1719310564787_17756 sqs-position-sticky"><div class="sqs-block image-block sqs-block-image sqs-stretched" data-block-type="5" id="block-yui_3_17_2_1_1719310564787_17756"><div class="sqs-block-content">
-    <div
+    <style>
+      .sqs-block-image .sqs-block-content {
+        height: 100%;
+        width: 100%;
+      }
+        .fe-block-yui_3_17_2_1_1719310564787_17756 .fluidImageOverlay {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          mix-blend-mode: normal;
+            opacity: 0;
+        }
+    </style>
+</div></div></div><div class="fe-block fe-block-yui_3_17_2_1_1719310564787_16672 sqs-position-sticky"><div class="sqs-block image-block sqs-block-image sqs-stretched" data-block-type="5" id="block-yui_3_17_2_1_1719310564787_16672"><div class="sqs-block-content">
+    <style>
+      .sqs-block-image .sqs-block-content {
+        height: 100%;
+        width: 100%;
+      }
+        .fe-block-yui_3_17_2_1_1719310564787_16672 .fluidImageOverlay {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          mix-blend-mode: normal;
+            opacity: 0;
+        }
+    </style>
+</div></div></div><div class="fe-block fe-block-yui_3_17_2_1_1719310564787_18933 sqs-position-sticky"><div class="sqs-block image-block sqs-block-image sqs-stretched" data-block-type="5" id="block-yui_3_17_2_1_1719310564787_18933"><div class="sqs-block-content">
+    <style>
+      .sqs-block-image .sqs-block-content {
+        height: 100%;
+        width: 100%;
+      }
+        .fe-block-yui_3_17_2_1_1719310564787_18933 .fluidImageOverlay {
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          mix-blend-mode: normal;
+            opacity: 0;
+        }
+    </style>
+</div></div></div><div class="fe-block fe-block-ca353587502df7bffc11 sqs-position-sticky"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-ca353587502df7bffc11"><div class="sqs-block-content">
+
+
+  <div
       class="
         image-block-outer-wrapper
         layout-caption-below
@@ -1882,23 +1933,17 @@
         </div>
       </div>
     </div>
-    <style>
-      .sqs-block-image .sqs-block-content {
-        height: 100%;
-        width: 100%;
-      }
-        .fe-block-yui_3_17_2_1_1719310564787_17756 .fluidImageOverlay {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          mix-blend-mode: normal;
-            opacity: 0;
-        }
-    </style>
-</div></div></div><div class="fe-block fe-block-yui_3_17_2_1_1719310564787_16672 sqs-position-sticky"><div class="sqs-block image-block sqs-block-image sqs-stretched" data-block-type="5" id="block-yui_3_17_2_1_1719310564787_16672"><div class="sqs-block-content">
-    <div
+  
+  
+  <div class="sqs-html-content">
+  <p href= "mailto: paula.wiszniewska@gmail.com" style="white-space:pre-wrap;">paula.wiszniewska@gmail.com</p>
+</div>
+
+  
+</div></div></div><div class="fe-block fe-block-422c561ad77ec413063c sqs-position-sticky"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-422c561ad77ec413063c"><div class="sqs-block-content">
+
+
+  <div
       class="
         image-block-outer-wrapper
         layout-caption-below
@@ -1924,23 +1969,17 @@
         </div>
       </div>
     </div>
-    <style>
-      .sqs-block-image .sqs-block-content {
-        height: 100%;
-        width: 100%;
-      }
-        .fe-block-yui_3_17_2_1_1719310564787_16672 .fluidImageOverlay {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          mix-blend-mode: normal;
-            opacity: 0;
-        }
-    </style>
-</div></div></div><div class="fe-block fe-block-yui_3_17_2_1_1719310564787_18933 sqs-position-sticky"><div class="sqs-block image-block sqs-block-image sqs-stretched" data-block-type="5" id="block-yui_3_17_2_1_1719310564787_18933"><div class="sqs-block-content">
-    <div
+
+  
+  <div class="sqs-html-content">
+  <p class="" style="white-space:pre-wrap;">+48 508 905 868</p>
+</div>
+
+  
+</div></div></div><div class="fe-block fe-block-3917a47d4f0901b23bca sqs-position-sticky"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-3917a47d4f0901b23bca"><div class="sqs-block-content">
+
+
+<div
       class="
         image-block-outer-wrapper
         layout-caption-below
@@ -1970,33 +2009,13 @@
         </div>
       </div>
     </div>
-    <style>
-      .sqs-block-image .sqs-block-content {
-        height: 100%;
-        width: 100%;
-      }
-        .fe-block-yui_3_17_2_1_1719310564787_18933 .fluidImageOverlay {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          mix-blend-mode: normal;
-            opacity: 0;
-        }
-    </style>
-</div></div></div><div class="fe-block fe-block-ca353587502df7bffc11 sqs-position-sticky"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-ca353587502df7bffc11"><div class="sqs-block-content">
+  
+  
 <div class="sqs-html-content">
-  <p class="" style="white-space:pre-wrap;">paula.wiszniewska@gmail.com</p>
+  <p href="https://www.instagram.com/bo_fajnie_tu/" target="_blank" style="white-space:pre-wrap;">https://www.instagram.com/bo_fajnie_tu/</p>
 </div>
-</div></div></div><div class="fe-block fe-block-422c561ad77ec413063c sqs-position-sticky"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-422c561ad77ec413063c"><div class="sqs-block-content">
-<div class="sqs-html-content">
-  <p class="" style="white-space:pre-wrap;">+48 508 905 868</p>
-</div>
-</div></div></div><div class="fe-block fe-block-3917a47d4f0901b23bca sqs-position-sticky"><div class="sqs-block html-block sqs-block-html" data-blend-mode="NORMAL" data-block-type="2" data-border-radii="&#123;&quot;topLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;topRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomLeft&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;,&quot;bottomRight&quot;:&#123;&quot;unit&quot;:&quot;px&quot;,&quot;value&quot;:0.0&#125;&#125;" id="block-3917a47d4f0901b23bca"><div class="sqs-block-content">
-<div class="sqs-html-content">
-  <p class="" style="white-space:pre-wrap;">https://www.instagram.com/bo_fajnie_tu/</p>
-</div>
+
+  
 </div></div></div></div></div>
     </div>
   </div>
